test/error/unterminated_comment.true
File 0, line 2, col 0 - 2:
unterminated comment

